Bug 292394 - Preview of images is not working
Summary: Preview of images is not working
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
: 293249 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-01-25 13:16 UTC by nucleo
Modified: 2012-10-19 13:27 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8.2
Sentry Crash Report:


Attachments
archive with image (122.73 KB, application/x-gzip)
2012-01-25 14:00 UTC, nucleo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nucleo 2012-01-25 13:16:21 UTC
Version:           unspecified (using Devel) 
OS:                Linux

After updating to KDE 4.8.0 preview of images is not working in Ark 2.18.

Reproducible: Always

Steps to Reproduce:
1. Open archive with images (png, jpg).
2. Click on image.

Actual Results:  
File name and type shown in preview window.

Expected Results:  
Image preview should be shown.

Preview of documents (PDF, TXT, DJVU) and videos is working.
Comment 1 Rex Dieter 2012-01-25 13:35:21 UTC
confirmed.  tested with both .tar and .zip archives containing a handful of .jpg files.
Comment 2 Raphael Kubo da Costa 2012-01-25 13:52:55 UTC
Could you attach a sample file?
Comment 3 Raphael Kubo da Costa 2012-01-25 13:59:45 UTC
BTW, there has been no significant commit to this part of the code in the KDE/4.8 branch, and Ark just looks for a KPart capable of showing the image. Can you check the debug output and see if Ark reports any problem finding a suitable KPart? You could also check which part is associated with these mimetypes in System Settings -> File Associations -> "image/jpeg" and then looking at the priority list in the Embedding tab (if there is more than one entry there, try changing the preferred one and previewing the image with Ark again).
Comment 4 nucleo 2012-01-25 14:00:31 UTC
Created attachment 68162 [details]
archive with image
Comment 5 nucleo 2012-01-25 14:05:11 UTC
Prioruty: gvpart, khtmlimage, okularkimgio
Nothing changed after changing priority.
Comment 6 nucleo 2012-01-25 14:09:40 UTC
The only message that appears is
QCursor: Cannot create bitmap cursor; invalid bitmap(s)

When viewing txt other messages.
Comment 7 Rex Dieter 2012-01-25 14:10:23 UTC
with kdebug enabled I get similar:

$ ark foo.tar 
ark(9896)/kdecore (KSycoca) KSycocaPrivate::openDatabase: Trying to open ksycoca from "/var/tmp/kdecache-rdieter1/ksycoca4"
ark(9896)/kdecore (trader) KMimeTypeTrader::query: query for mimeType  "application/x-tar" ,  "Kerfuffle/Plugin"  : returning  1  offers
ark(9896)/kdecore (K*TimeZone*) KSystemTimeZonesPrivate::instance: instance(): ... initialised
ark(9896)/kdecore (K*TimeZone*) KSystemTimeZonesPrivate::readConfig: readConfig(): local zone= "America/Chicago"
Comment 8 Rex Dieter 2012-01-25 14:11:00 UTC
oops, that was truncated, the whole thing:

$ ark foo.tar 
ark(9896)/kdecore (KSycoca) KSycocaPrivate::openDatabase: Trying to open ksycoca from "/var/tmp/kdecache-rdieter1/ksycoca4"
ark(9896)/kdecore (trader) KMimeTypeTrader::query: query for mimeType  "application/x-tar" ,  "Kerfuffle/Plugin"  : returning  1  offers
ark(9896)/kdecore (K*TimeZone*) KSystemTimeZonesPrivate::instance: instance(): ... initialised
ark(9896)/kdecore (K*TimeZone*) KSystemTimeZonesPrivate::readConfig: readConfig(): local zone= "America/Chicago"
ark(9896)/kdecore (K*TimeZone*) KSystemTimeZonesPrivate::readZoneTab: readZoneTab( "/usr/share/zoneinfo/zone.tab" )
ark(9896)/kdecore (kdelibs) KTempDir::create: KTempDir: Temporary directory created : "/tmp/kde-rdieter1/arksfr6k0/"
ark(9896)/kdecore (trader) KMimeTypeTrader::query: query for mimeType  "image/jpeg" ,  "KParts/ReadOnlyPart"  : returning  3  offers
ark(9896)/kdecore (trader) KMimeTypeTrader::query: query for mimeType  "image/jpeg" ,  "KParts/ReadOnlyPart"  : returning  3  offers
QCursor: Cannot create bitmap cursor; invalid bitmap(s)
Comment 9 Rex Dieter 2012-01-25 14:20:26 UTC
Seems changing to khtmlimage, okularkimgio works for me.  only fails for gvpart.
Comment 10 Raphael Kubo da Costa 2012-01-25 14:21:21 UTC
Alright, reassigning to Gwenview.
Comment 11 Raphael Kubo da Costa 2012-02-04 00:30:26 UTC
*** Bug 293249 has been marked as a duplicate of this bug. ***
Comment 12 Zoltán Ilyés 2012-02-04 10:40:20 UTC
There is one thing I just don't understand: if ark uses gwenview anyway (via gvpart), why not just open the file in gwenview, like krusader does. Will be more simple, one could browse through the images instead of opening each one in a separated tiny preview window. This is one major feature I like in krusader.
Comment 13 nucleo 2012-03-06 17:48:54 UTC
Problem is still in KDE 4.8.1.
Comment 14 nucleo 2012-03-06 18:25:46 UTC
Preview in Ark working after installing gwenview-4.7.4 in KDE 4.8.1.
Comment 15 Kevin Kofler 2012-03-11 00:33:34 UTC
Krusader also uses the GwenviewPart (if you use the F3 viewer feature). But for some reason the part seems to work in Krusader and Konqueror, at least that's what reports say.
Comment 16 Aurelien Gateau 2012-03-11 22:21:38 UTC
Git commit 2945372b9c20a7041858a861aa11385551dd506b by Aurélien Gâteau.
Committed on 11/03/2012 at 23:20.
Pushed by gateau into branch 'KDE/4.8'.

Fix failure to load cursor in KPart
FIXED-IN: 2.8.2

M  +3    -1    lib/documentview/abstractimageview.cpp

http://commits.kde.org/gwenview/2945372b9c20a7041858a861aa11385551dd506b
Comment 17 Aurelien Gateau 2012-03-11 22:21:38 UTC
Git commit 83f424c9feb291e491920357d4ad6949e767e169 by Aurélien Gâteau.
Committed on 11/03/2012 at 23:16.
Pushed by gateau into branch 'KDE/4.8'.

Correctly set DocumentViewContainer parent

Fix GVPart usage in Ark
FIXED-IN: 2.8.2

M  +2    -2    part/gvpart.cpp

http://commits.kde.org/gwenview/83f424c9feb291e491920357d4ad6949e767e169