Correctly set DocumentViewContainer parent

Fix GVPart usage in Ark
BUG: 292394
FIXED-IN: 2.8.2